Switch package name to filesystem

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "icicleio/file",
+    "name": "icicleio/filesystem",
     "description": "Asynchronous filesystem component for Icicle.",
     "keywords": [
         "asynchronous",
