--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,13 @@
         }
     ],
     "require": {
-        "icicleio/icicle": "^0.8.2",
-        "icicleio/stream": "^0.4",
-        "icicleio/concurrent": "dev-master"
+        "icicleio/icicle": "^0.9.1",
+        "icicleio/stream": "^0.5.2",
+        "icicleio/concurrent": "^0.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.6"
+        "phpunit/phpunit": "^4.8"
     },
-    "minimum-stability": "dev",
     "suggest": {
         "ext-eio": "Extension providing better performance for asynchronous file access. v1.2.6+ required."
     },
