--- a/composer.json
+++ b/composer.json
@@ -16,15 +16,21 @@
         }
     ],
     "require": {
-        "icicleio/icicle": "^0.9.1",
-        "icicleio/stream": "^0.5.4",
-        "icicleio/concurrent": "^0.3"
+        "icicleio/icicle": "^2.0",
+        "icicleio/stream": "^2.0",
+        "icicleio/concurrent": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8"
     },
+    "minimum-stability": "dev",
     "suggest": {
         "ext-eio": "Extension providing better performance for asynchronous file access. v1.2.6+ required."
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.0.x-dev"
+        }
     },
     "autoload": {
         "psr-4": {
